--- a/src/app/ui/global.css
+++ b/src/app/ui/global.css
@@ -7,3 +7,11 @@
   /* stroke: black; */
   stroke-width: 6;
 }
+
+:root {
+  --navbar-height: 6.3rem; /* Adjust this value to match the actual height of your navbar */
+}
+
+.navbar {
+  height: var(--navbar-height);
+}
